auth completed admin panel started

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10271,3 +10271,7 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+html, body {
+  margin-right: calc(-1 * (100vw - 100%));
+  text-rendering: optimizeLegibility;
+}
