--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,8 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+html, body {
+    margin-right: calc(-1 * (100vw - 100%));
+    text-rendering: optimizeLegibility;
+}
