--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
-@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+@charset "UTF-8";
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -10274,4 +10274,10 @@ textarea.form-control-lg {
 html, body {
   margin-right: calc(-1 * (100vw - 100%));
   text-rendering: optimizeLegibility;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
