--- a/src/main.scss
+++ b/src/main.scss
@@ -26,3 +26,34 @@ button {
 .sr-only {
   display: none !important;
 }
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+}
+
+.form-floating {
+  margin-bottom: 10px;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.form-floating .error-message {
+  bottom: 0;
+  left: 10px;
+  font-size: 12px;
+}
+
+.form-alert {
+  bottom: 90px;
+  right: 30px;
+}
+
+.form-button {
+  height: 46px;
+}
+
+.spin {
+  transform: translate(-50%, -50%);
+  font-size: 16px;
+}
