--- a/src/main.scss
+++ b/src/main.scss
@@ -10,6 +10,10 @@ main {
 }
 
 button {
+  position: relative;
+  .lds-ellipsis {
+    max-height: 25px !important;
+  }
   .lds-ellipsis div {
     top: 10px !important;
   }
